# video-edit

./: .gitignore  CMakeLists.txt  README.md  setup.py
lib/FFmpeg/: CMakeLists.txt
lib/pybind11/: CMakeLists.txt
src/: assign_timestamps.cpp  assign_timestamps.h  calc_durations.cpp  calc_durations.h  concat_demuxer.cpp  concat_demuxer.h  edit.cpp  edit.h  load_frame.cpp  load_videos.cpp  load_videos.h  main.cpp  pywrap.cpp  video.cpp  video.h  video_edit_lib.cpp  video_edit_lib.h
src/frontend/: .gitignore  install_video_edit.bash  utils.py  webserver.py
src/frontend/static/: bundle_script.js  bundle_style.css  index-b501f87c.js
src/frontend/templates/: index.html
tests/: VideoEdit-0.0.1-cp39-cp39-linux_x86_64.whl  auto.bash
